# AS608-ESP32s3

./: .gitignore  CMakeLists.txt  DESIGN_GUIDE.md  README.md  UI_DESIGN_GUIDE.md  client.html  design_preview.html  note.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/as608/: CMakeLists.txt  as608.c  as608.h  as608_manager.cpp  as608_protocol.c  as608_protocol.h  as608_sensor.cpp
components/as608/include/: as608.h  as608_manager.h  as608_sensor.h
components/as608_driver/: CMakeLists.txt  as608_driver.cpp
components/as608_driver/include/: as608_driver.h
components/khoa_as608/: CMakeLists.txt  README.md  as608.cpp  as608.hpp  as608_protocol.cpp  as608_protocol.hpp  as608_uart.cpp  as608_uart.hpp
components/khoa_audio/: CMakeLists.txt  audio.c  audio.cpp
components/khoa_esp_wifi/: CMakeLists.txt  dns_server.cc  wifi_configuration_ap.cc  wifi_station.cc
main/: CMakeLists.txt  idf_component.yml  main.c  main.cc  main.cpp
main/app/: app.c  app.h  app_events.h
main/audio/: audio.c  audio.h  audio_events.h
main/button/: button.c  button.cpp  button.h  button_events.h
main/common/: config.h  types.h
main/finger/: finger.c  finger.h  finger_events.h  finger_meta.c  finger_meta.h
main/ota/: ota.c  ota.h
main/settings/: settings.c  settings.h
main/webserver/: webserver.c  webserver.h
main/webserver/assets/: api.js  app.js  index.html  style.css  ws.js
main/wifi/: wifi.cc  wifi.h  wifi_events.h
partitions/: 4m.csv
release/v20251206_110434/: flash_info.txt
tools/: convert_audio.py  export_firmware.py
(+4 files in other folders)
