idf_component_register(
    SRCS 
        "main.c"
        "button/button.c"
        "settings/settings.c"
    INCLUDE_DIRS 
        "."
        "common"
        "button"
        "settings"
    REQUIRES 
        as608 
        nvs_flash 
        esp_event
        espressif__button
        driver
        esp_http_server
        json
        app_update
        khoa_audio
)