idf_component_register(
    SRCS 
        "main.cpp"
        "settings/settings.c"
    INCLUDE_DIRS 
        "."
        "common"
        "settings"
    REQUIRES 
        as608
        nvs_flash 
        esp_event
        espressif__button
        driver
        esp_http_server
        json
        app_update
        khoa_audio
)