idf_component_register(
    SRCS 
        "main.c"
        "app/app.c"
        "finger/finger.c"
        "finger/finger_meta.c"
        "button/button.c"
        "wifi/wifi.cc"
        "settings/settings.c"
    INCLUDE_DIRS 
        "."
        "common"
        "app"
        "finger"
        "button"
        "wifi"
        "settings"
    REQUIRES 
        as608 
        nvs_flash 
        esp_event
        espressif__button
        driver
        esp_adc
        khoa_esp_wifi
        khoa_audio
)